feat: Implement Spring Boot backend and API client
-   Generated the initial Spring Boot backend codebase, including:
    -   `ScarceFitnessApplication.java`
    -   Sample REST controllers for authentication and data retrieval.
    -   JWT-based authentication configuration.
    -   `pom.xml` with necessary dependencies.
    -   `application.properties` with basic configuration.
-   Updated `vite.config.ts` to output React build files to the Spring Boot static resources directory.
-   Provided a sample `apiClient.ts` for the React frontend, demonstrating REST API calls.
-   Included a step-by-step README outline for building and running the project.